2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard.cpp:
	* ProximitySensor.cpp: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.cpp: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DViewpointNode.cpp:
	* PlaneSensor.h:
	* PlaneSensor.cpp:
	* TouchSensor.cpp:
	* SphereSensor.cpp:
	* CylinderSensor.h:
	* CylinderSensor.cpp:
	* X3DPointingDeviceSensorNode.h:
	* X3DPointingDeviceSensorNode.cpp: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* SpiderMonkey.h:
	* SpiderMonkey.cpp:
	* TransformHandle.wrl:
	* X3DJavaScriptEngine.h:
	* jsContext.h:
	* jsGlobals.cpp:
	* jsBrowser.cpp:
	* jsContext.cpp:
	* jsX3DConstants.h:
	* jsX3DConstants.cpp:
	* jsSFNode.cpp:
	* PlaneSensor.cpp:
	* jsX3DExecutionContext.cpp: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* X3D.h:
	* X3D.cpp:
	* findNode:
	* libtitania-x3d.cproj:
	* Error.cpp:
	* SFVec3.h:
	* Hit.cpp:
	* SFVec2.h:
	* Parser.h:
	* Route.h:
	* SFVec4.h:
	* X3DInput.h:
	* Output.cpp:
	* SFNode.h:
	* MFNode.h:
	* X3DOutput.h:
	* X3DObject.h:
	* Grammar.h:
	* SFNode.cpp:
	* Parser.cpp:
	* World.h:
	* MFNode.cpp:
	* Route.cpp:
	* X3DInput.cpp:
	* Proto.h:
	* X3DParser.h:
	* SFMatrix3.h:
	* SFImage.cpp:
	* SFColor.cpp:
	* Grammar.cpp:
	* X3DScalar.h:
	* SFMatrix4.h:
	* X3DObject.cpp:
	* Router.cpp:
	* X3DOutput.cpp:
	* X3DSFNode.h:
	* SFString.cpp:
	* Proto.cpp:
	* X3DBaseNode.h:
	* Selection.h:
	* Console.cpp:
	* Scene.cpp:
	* World.cpp:
	* X3DConstants.h:
	* RouteArray.h:
	* X3DContext.cpp:
	* X3DBrowser.h:
	* SFRotation4.h:
	* X3DScene.h:
	* ArrayFields.h:
	* X3DParser.cpp:
	* X3DWidget.cpp:
	* X3DArrayField.h:
	* Selection.cpp:
	* X3DBaseNode.cpp:
	* RouteArray.cpp:
	* X3DProto.cpp:
	* Text.h:
	* X3DScene.cpp:
	* ProtoArray.h:
	* SFColorRGBA.cpp:
	* X3DBrowser.cpp:
	* ArrayFields.cpp:
	* Generator.h:
	* ExternProto.h:
	* Shape.h:
	* ExportedNode.h:
	* Text.cpp: