@@ -1,5 +1,13 @@
 2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* SphereSensor.h:
+	* PlaneSensor.cpp:
+	* TouchSensor.cpp:
+	* SphereSensor.cpp:
+	* CylinderSensor.cpp: 
+
+2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Billboard.cpp:
 	* ProximitySensor.cpp: 
 
